--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "rate-limit-redis": "^4.3.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -69,11 +72,8 @@
     "jest": "^30.2.0",
     "nodemon": "^3.1.11",
     "prettier": "^3.7.4",
-    "rate-limit-redis": "^4.3.1",
     "sequelize-cli": "^6.6.3",
     "supertest": "^7.1.4",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
