--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "rate-limit-redis": "^4.3.1",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
-    "uuid": "^9.0.0",
-    "winston": "^3.18.3",
-    "rate-limit-redis": "^4.3.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^9.0.0",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -64,6 +64,7 @@
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
     "eslint": "^9.39.1",
