--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.0",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "sequelize-cli": "^6.6.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -73,7 +74,6 @@
     "jest": "^30.2.0",
     "nodemon": "^3.1.11",
     "prettier": "^3.7.4",
-    "sequelize-cli": "^6.6.3",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
