Fix: Copy config.js to dist and update .sequelizerc for prod

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,11 @@
 const path = require('path');
 
+const isProduction = process.env.NODE_ENV === 'production';
+const sourceDir = isProduction ? 'dist' : 'src';
+
 module.exports = {
-  'config': path.resolve('src', 'config', 'config.js'),
-  'models-path': path.resolve('src', 'models'),
+  'config': path.resolve(sourceDir, 'config', 'config.js'),
+  'models-path': path.resolve(sourceDir, 'models'),
   'seeders-path': path.resolve('seeders'),
   'migrations-path': path.resolve('migrations'),
 };
