feat: Add Railway deployment support and admin-only seeder

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
     "db:seed": "sequelize-cli db:seed:all",
     "db:seed:undo:all": "sequelize-cli db:seed:undo:all",
+    "db:seed:admin": "sequelize-cli db:seed --seed 20250101000000-initial-admin.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
